FIX: editor link more visible

--- a/src/style.css
+++ b/src/style.css
@@ -172,7 +172,8 @@ svg.leaflet-attribution-flag {
 }
 
 .backToMap,
-#editMapLink {
+#editorLink {
+  display: block;
   border: 1px solid var(--ffm-green);
   color: var(--ffm-green);
   background-color: var(--color-text);
@@ -183,6 +184,7 @@ svg.leaflet-attribution-flag {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
 }
 
 .backToMap:hover {
